Better handling of locked settings due to constants being defined. Also fix a display overlap on some locked settings
git-svn-id: https://bbpress.svn.wordpress.org/trunk@2239 9866e705-20ec-0310-96e7-cbb4277adcfb

--- a/bb-admin/style-rtl.css
+++ b/bb-admin/style-rtl.css
@@ -336,6 +336,8 @@ form.settings div div.label {
 form.settings div.disabled label,
 form.settings div.disabled div.label {
 	background-position: 0 0;
+	padding-right: 0;
+	padding-left: 20px;
 }
 
 form.settings div div.inputs {
